clusters/cluster/apps/neuland-app/reimanns-scraper/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reimanns-scraper
  namespace: neuland-app
spec:
  replicas: 1
  minReadySeconds: 3
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: reimanns-scraper
  template:
    metadata:
      labels:
        app: reimanns-scraper
    spec:
      containers:
      - name: reimanns-scraper
        image: ghcr.io/neuland-ingolstadt/reimanns-scraper:129
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /q/health/live
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /q/health/ready
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 300m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 64Mi
