clusters/cluster/apps/neuland-app/reimanns-scraper/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reimanns-scraper
  namespace: neuland-app
spec:
  type: ClusterIP
  selector:
    app: reimanns-scraper
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
