clusters/cluster/apps/neuland-app/reimanns-scraper/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reimanns-scraper
  namespace: neuland-app
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - reimanns-api.neuland.app
      secretName: neuland-app-prod-tls
  rules:
    - host: reimanns-api.neuland.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reimanns-scraper
                port:
                  number: 8080
